--- a/package.json
+++ b/package.json
@@ -7,13 +7,30 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint:js": "eslint . --fix",
+    "format": "prettier -w ./src ./src/**/*.astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.1",
+    "@astrojs/netlify": "^3.0.4",
     "@astrojs/tailwind": "^5.0.2",
-    "astro": "^3.4.3",
+    "astro": "^3.6.3",
+    "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.44.7",
+    "@types/prettier": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.54.0",
+    "eslint-plugin-astro": "^0.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "postcss-html": "^1.5.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2",
+    "webdev-configs": "^1.5.0"
   }
 }
