--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --port 3000 --open",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
@@ -15,7 +15,7 @@
     "@astrojs/check": "^0.3.1",
     "@astrojs/netlify": "^3.1.1",
     "@astrojs/tailwind": "^5.0.3",
-    "astro": "^4.0.3",
+    "astro": "^4.2.4",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2"
