--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/netlify": "^3.1.1",
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.2.4",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2"
