--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.2.4",
     "astro-google-fonts-optimizer": "^0.2.2",
-    "astro-icon": "^0.8.1",
+    "astro-icon": "^1.0.3",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@iconify-json/fa": "^1.1.8",
+    "@iconify-json/ph": "^1.1.10",
+    "@iconify-json/simple-icons": "^1.1.89",
     "@types/eslint": "^8.44.7",
     "@types/prettier": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
